docs: added description html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<p>hello </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon_cat.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cairo:wght@200&family=Licorice&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cairo:wght@200&family=Licorice&display=swap" rel="stylesheet">
+</head>
+<body>
+   <header>
+       <div class="head-container">
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+              <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+            </ul>
+          </nav>
+       </div>
+   </header>
+   <main>              
+        <div  class="main-container">
+            <section class="section-profile">
+                <img class="img-avatar" src="./assets/avatar.jpg" alt="avatar">
+                <h1>Anna Borisenko</h1>
+            </section>
+            <section class="section" id="contacts">
+               <h2>Contacts</h2>
+                <ul>
+                    <li>Phone: +7 911 833 54 67</li>
+                    <li>e-mail: ann.jeferson@gmail.com</li>
+                    <li>Telegram: Anna Borisenko</li>
+                    <li><a href="https://www.instagram.com/borisenko_anna/?utm_medium=copy_link" class="link">Instagramm: borisenko_anna</a></li>
+                    </ul>
+            </section>
+            <section class="section" id="about">
+                    <h2>About</h2>
+                    <p>I’m working in the aviation industry in the aircraft software development company. I am an aviation navigator by education and now my job is to create an aeronautical database to full the creating software. The work taught me to be very diligent and thoroughly study the documentation, because this is directly related to safety of flight. <Br>
+                        I really liked programming at the university, I’ve even took part in various scientific projects for the development of software for UAVs. Now I want to restore knowledge and reach a new level. I really like to learn new things and acquire new skills. 
+                        </p>
+            </section>
+            <section class="section" id="skills">
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>HTML5, CSS3, Matlab, C#, C++</li>
+                        <li>Git, GitHub</li>
+                        <li>VS Code, SQL</li>
+                        <li>Adobe Photoshop, Illustrator, CoralDrow</li>
+                        <li>Geoinformation programs: MapInfo, Qgis </li>
+                    </ul>
+            </section>
+            <section class="section" id="education">
+                    <h2>Education</h2>
+                    <ul>
+                        <li><span class="text-yellow">Air Traffic controller:</span> Kiev, 2 years</li>
+                        <li><span class="text-yellow">Aeronautical engeneer:</span> 5 years, Saint-Petersburg</li>
+                        <li><span class="text-yellow">ITEA HTML&CSS masterclass:</span> 1 week, on-line </li>
+                        <li><span class="text-yellow">RS Schools Course «JavaScript/Front-end. Stage 0»:</span> in process</li>
+                        <li><span class="text-yellow">English level:</span> upper intermediate</li>
+                        </ul>
+                        <p>Code example</p>
+                   <code>if (val^2==1.0)<Br>
+                    {<Br>
+                        ar[i] = 0.0;<Br>
+                        throw lnException(i);<Br>
+                    }<Br>
+                    if (i>=n)<Br>
+                    throw indexException(i);<Br>
+                    ar[i]=ln((val^2)-1);<Br>
+                     } </code>
+                
+            </section>
+            </div>
+   </main>
+   <footer> 
+    <div class="foot-container">
+            <p>© 2022 </p>
+            <a href="https://github.com/AnnaBorisenko13" class="link">AnnaBorisenko13</a>
+            <a href="https://rs.school/js/"> <img class="img-logo" src="./assets/rs_school_js.svg" alt="Course-logo"></a>
+    </div>
+   </footer>     
+</body>
+</html>
